# rustre

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  rust_versions.json
.github/workflows/: rust.yml
src/: lib.rs  main.rs  pe_strings.rs  update.rs
tests/: integration_tests.rs
tools/: fetch_rust_versions.py
