[package]
name = "rustre"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustre"
path = "src/main.rs"

[lib]
name = "rustre"
path = "src/lib.rs"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.20.0"
zip = { version = "4.1.0", features = ["deflate", "bzip2", "time", "aes-crypto"] }
aes = "0.8.4"
cbc = "0.1.2"
pbkdf2 = "0.12.2"
sha1 = "0.10.6"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
