[package]
name = "rustre"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "rustre"
path = "src/main.rs"

[lib]
name = "rustre"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.20"
zip = { version = "5.1", features = ["deflate", "bzip2", "time", "aes-crypto"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
